Refactoring and Java-docs